--- a/style.css
+++ b/style.css
@@ -1,58 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background:#252422;
+    color:white;
+font-family: 'Poppins', sans-serif;
+
 }
+
+
+p{
+    font-size: 2rem;
+}
+    
 
 .main{
     width:100%;
     height: 100vh;
     display: flex;
     justify-content: center;
-    align-items: center;
-     /* background-color: black; */
-     color:rgb(255, 255, 255);
+    align-items: center;    
     font-size: 3rem;
-}
-
-
-
-button{
-    height: 7rem;
-    width: 20rem;
-    border-radius: 3rem;
     
-    font-size: 3rem;
 }
-/* 
-/* This is the style for the div that needs to be attached. */
-/* .cursorDot {
-    mix-blend-mode: difference;
-    background-color: white;
-    position: absolute;
-    width: 2rem;
-    height: 2rem;
-    border-radius: 50%;
-  }
-  
-  /* This is the style for the div that needs to be attached. */
-  /* .cursorOutline {
-    position: absolute;
-    mix-blend-mode: difference;
-    border: 3px solid white;
-    width: 4rem;
-    height: 4rem;
-    border-radius: 50%;
-  }
-   */
-  /* This is the common styling for the divs */
-  /* .cursorDot,
-  .cursorOutline {
-    position: fixed;
-    top: 0;
-    left: 0;
-    transform: translate(-50%, -50%);
-    border-radius: 50%;
-    z-index: 2;
-    pointer-events: none;
-  } */
+
