--- a/style.css
+++ b/style.css
@@ -1,372 +1,379 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-
-body{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    background:#252422;
-    color:white;
-font-family: 'Poppins', sans-serif;
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background: #252422;
+  color: white;
+  font-family: "Poppins", sans-serif;
 }
 
-*{
+* {
   text-decoration: none;
   color: inherit;
 
+
 }
 
-p{
-    font-size: 2rem;
-}
-    
 
-.main{
-    width:100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;    
-    font-size: 3rem;
-    
+p {
+  font-size: 2rem;
 }
 
+.main {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 3rem;
+}
 
 body {
-    background-color: #272727;
-    padding: 10px;
+  background-color: #272727;
+  padding: 10px;
+}
+
+.fakeButtons {
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  border: 1px solid #000;
+  position: relative;
+  top: 6px;
+  left: 6px;
+  background-color: #ff3b47;
+  border-color: #9d252b;
+  display: inline-block;
+}
+
+.fakeMinimize {
+  left: 11px;
+  background-color: #ffc100;
+  border-color: #9d802c;
+}
+
+.fakeZoom {
+  left: 16px;
+  background-color: #00d742;
+  border-color: #049931;
+}
+
+.fakeMenu {
+  display: flex;
+  width: 100%;
+  box-sizing: border-box;
+  height: 25px;
+  background-color: #bbb;
+  margin: 0 auto;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+}
+
+span {
+  color: #fff;
+  font-weight: bold;
+}
+
+.line1 {
+  color: #9cd9f0;
+  -webkit-animation: type 0.5s 1s steps(20, end) forwards;
+  -moz-animation: type 0.5s 1s steps(20, end) forwards;
+  -o-animation: type 0.5s 1s steps(20, end) forwards;
+  animation: type 0.5s 1s steps(20, end) forwards;
+}
+
+.cursor1 {
+  -webkit-animation: blink 1s 2s 2 forwards;
+  -moz-animation: blink 1s 2s 2 forwards;
+  -o-animation: blink 1s 2s 2 forwards;
+  animation: blink 1s 2s 2 forwards;
+}
+
+.line2 {
+  color: #cdee69;
+  -webkit-animation: type 0.5s 4.25s steps(20, end) forwards;
+  -moz-animation: type 0.5s 4.25s steps(20, end) forwards;
+  -o-animation: type 0.5s 4.25s steps(20, end) forwards;
+  animation: type 0.5s 4.25s steps(20, end) forwards;
+}
+
+.cursor2 {
+  -webkit-animation: blink 1s 5.25s 2 forwards;
+  -moz-animation: blink 1s 5.25s 2 forwards;
+  -o-animation: blink 1s 5.25s 2 forwards;
+  animation: blink 1s 5.25s 2 forwards;
+}
+
+.line3 {
+  color: #e09690;
+  -webkit-animation: type 0.5s 7.5s steps(20, end) forwards;
+  -moz-animation: type 0.5s 7.5s steps(20, end) forwards;
+  -o-animation: type 0.5s 7.5s steps(20, end) forwards;
+  animation: type 0.5s 7.5s steps(20, end) forwards;
+}
+
+.cursor3 {
+  -webkit-animation: blink 1s 8.5s 2 forwards;
+  -moz-animation: blink 1s 8.5s 2 forwards;
+  -o-animation: blink 1s 8.5s 2 forwards;
+  animation: blink 1s 8.5s 2 forwards;
+}
+
+.line4 {
+  color: #fff;
+  -webkit-animation: type 0.5s 10.75s steps(20, end) forwards;
+  -moz-animation: type 0.5s 10.75s steps(20, end) forwards;
+  -o-animation: type 0.5s 10.75s steps(20, end) forwards;
+  animation: type 0.5s 10.75s steps(20, end) forwards;
+}
+
+.cursor4 {
+  -webkit-animation: blink 1s 11.5s infinite;
+  -moz-animation: blink 1s 8.5s infinite;
+  -o-animation: blink 1s 8.5s infinite;
+  animation: blink 1s 8.5s infinite;
+}
+
+@-webkit-keyframes blink {
+  0% {
+    opacity: 0;
   }
-  
-  .fakeButtons {
-    height: 10px;
-    width: 10px;
-    border-radius: 50%;
-    border: 1px solid #000;
-    position: relative;
-    top: 6px;
-    left: 6px;
-    background-color: #ff3b47;
-    border-color: #9d252b;
-    display: inline-block;
+  40% {
+    opacity: 0;
   }
-  
-  .fakeMinimize {
-    left: 11px;
-    background-color: #ffc100;
-    border-color: #9d802c;
+  50% {
+    opacity: 1;
   }
-  
-  .fakeZoom {
-    left: 16px;
-    background-color: #00d742;
-    border-color: #049931;
+  90% {
+    opacity: 1;
   }
-  
-  .fakeMenu {
-    display: flex;
-    width: 100%;
-    box-sizing: border-box;
-    height: 25px;
-    background-color: #bbb;
-    margin: 0 auto;
-    border-top-right-radius: 5px;
-    border-top-left-radius: 5px;
+  100% {
+    opacity: 0;
   }
-  
-  /* .fakeScreen {
-    background-color: #151515;
-    box-sizing: border-box;
-    width: 550px;
-    margin: 0 auto;
-    padding: 20px;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-  } */
-  
-  /* p {
-    position: relative;
-    left: 2rem;
-    text-align: left;
-    font-size: 1.25em;
-    font-family: monospace;
-    white-space: normal;
-    overflow: hidden;
-    width: 0;
+}
+
+@-moz-keyframes blink {
+  0% {
+    opacity: 0;
   }
-   */
-  span {
-    color: #fff;
-    font-weight: bold;
+  40% {
+    opacity: 0;
   }
-  
-  .line1 {
-    color: #9CD9F0;
-    -webkit-animation: type .5s 1s steps(20, end) forwards;
-    -moz-animation: type .5s 1s steps(20, end) forwards;
-    -o-animation: type .5s 1s steps(20, end) forwards;
-    animation: type .5s 1s steps(20, end) forwards;
+  50% {
+    opacity: 1;
   }
-  
-  .cursor1 {
-    -webkit-animation: blink 1s 2s 2 forwards;
-    -moz-animation: blink 1s 2s 2 forwards;
-    -o-animation: blink 1s 2s 2 forwards;
-    animation: blink 1s 2s 2 forwards;
+  90% {
+    opacity: 1;
   }
-  
-  .line2 {
-    color: #CDEE69;
-    -webkit-animation: type .5s 4.25s steps(20, end) forwards;
-    -moz-animation: type .5s 4.25s steps(20, end) forwards;
-    -o-animation: type .5s 4.25s steps(20, end) forwards;
-    animation: type .5s 4.25s steps(20, end) forwards;
+  100% {
+    opacity: 0;
   }
-  
-  .cursor2 {
-    -webkit-animation: blink 1s 5.25s 2 forwards;
-    -moz-animation: blink 1s 5.25s 2 forwards;
-    -o-animation: blink 1s 5.25s 2 forwards;
-    animation: blink 1s 5.25s 2 forwards;
+}
+
+@-o-keyframes blink {
+  0% {
+    opacity: 0;
   }
-  
-  .line3 {
-    color: #E09690;
-    -webkit-animation: type .5s 7.5s steps(20, end) forwards;
-    -moz-animation: type .5s 7.5s steps(20, end) forwards;
-    -o-animation: type .5s 7.5s steps(20, end) forwards;
-    animation: type .5s 7.5s steps(20, end) forwards;
+  40% {
+    opacity: 0;
   }
-  
-  .cursor3 {
-    -webkit-animation: blink 1s 8.5s 2 forwards;
-    -moz-animation: blink 1s 8.5s 2 forwards;
-    -o-animation: blink 1s 8.5s 2 forwards;
-    animation: blink 1s 8.5s 2 forwards;
+  50% {
+    opacity: 1;
   }
-  
-  .line4 {
-    color: #fff;
-    -webkit-animation: type .5s 10.75s steps(20, end) forwards;
-    -moz-animation: type .5s 10.75s steps(20, end) forwards;
-    -o-animation: type .5s 10.75s steps(20, end) forwards;
-    animation: type .5s 10.75s steps(20, end) forwards;
+  90% {
+    opacity: 1;
   }
-  
-  .cursor4 {
-    -webkit-animation: blink 1s 11.5s infinite;
-    -moz-animation: blink 1s 8.5s infinite;
-    -o-animation: blink 1s 8.5s infinite;
-    animation: blink 1s 8.5s infinite;
+  100% {
+    opacity: 0;
   }
-  
-  @-webkit-keyframes blink {
-    0% {
-      opacity: 0;
-    }
-    40% {
-      opacity: 0;
-    }
-    50% {
-      opacity: 1;
-    }
-    90% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 0;
-    }
+}
+
+@keyframes blink {
+  0% {
+    opacity: 0;
   }
-  
-  @-moz-keyframes blink {
-    0% {
-      opacity: 0;
-    }
-    40% {
-      opacity: 0;
-    }
-    50% {
-      opacity: 1;
-    }
-    90% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 0;
-    }
+  40% {
+    opacity: 0;
   }
-  
-  @-o-keyframes blink {
-    0% {
-      opacity: 0;
-    }
-    40% {
-      opacity: 0;
-    }
-    50% {
-      opacity: 1;
-    }
-    90% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 0;
-    }
+  50% {
+    opacity: 1;
   }
-  
-  @keyframes blink {
-    0% {
-      opacity: 0;
-    }
-    40% {
-      opacity: 0;
-    }
-    50% {
-      opacity: 1;
-    }
-    90% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 0;
-    }
+  90% {
+    opacity: 1;
   }
-  
-  @-webkit-keyframes type {
-    to {
-      width: 17em;
-    }
+  100% {
+    opacity: 0;
   }
-  
-  @-moz-keyframes type {
-    to {
-      width: 17em;
-    }
+}
+
+@-webkit-keyframes type {
+  to {
+    width: 17em;
   }
-  
-  @-o-keyframes type {
-    to {
-      width: 17em;
-    }
+}
+
+@-moz-keyframes type {
+  to {
+    width: 17em;
   }
-  
-  @keyframes type {
-    to {
-      width: 17em;
-    }
+}
+
+@-o-keyframes type {
+  to {
+    width: 17em;
   }
- 
-  
-  .fakeScreen {
-    /* Styles for the terminal screen */
-    background-color: black;
-    padding: 20px;
-    font-family: monospace;
-    height: 80vh;
-    overflow-y: scroll;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
+}
+
+@keyframes type {
+  to {
+    width: 17em;
   }
-  
-  .title {
-    color: rgb(0, 255, 26);
-    font-weight: bold;
+}
+
+.fakeScreen {
+  /* Styles for the terminal screen */
+  background-color: black;
+  padding: 20px;
+  max-width: 1200px; /* Set a maximum width of 1200px */
+  margin: 0 auto; /* Center the container horizontally */
+  font-family: monospace;
+  height: 80vh;
+  overflow-y: scroll;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.title {
+  color: rgb(0, 255, 26);
+  font-weight: bold;
+}
+
+.content {
+  color: white;
+  /* Add any additional content styles here */
+}
+
+.code {
+  color: rgb(0, 255, 26);
+  font-family: monospace;
+  height: 2rem;
+}
+
+/* Styling for cursor animation */
+.title::after,
+.content::after,
+.code::after {
+  content: "_";
+  animation: blink 1s infinite;
+}
+
+@keyframes blink {
+  50% {
+    opacity: 0;
   }
-  
-  .content {
-    color: white;
-    /* Add any additional content styles here */
-  }
-  
-  .code {
-    color: rgb(0, 255, 26);
-    font-family: monospace;
-    height: 2rem;
-  }
-  
-  /* Styling for cursor animation */
-  .title::after,
-  .content::after,
-  .code::after {
-    content: "_";
-    animation: blink 1s infinite;
-  }
-  
-  @keyframes blink {
-    50% {
-      opacity: 0;
-    }
+}
+
+.terminalContainer {
+  /* background-color: #049931; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 2rem;
+  height: 100vh;
+  max-width: 1200px; /* Set a maximum width of 1200px */
+  margin: 0 auto; /* Center the container horizontally */
+}
+
+.terminalContainer p {
+  font-size: 1rem;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.terminalContainer *::selection {
+  background-color: #00d742;
+  color: black;
+}
+
+.blockDiv {
+  width: 100%;
+  height: 100vh;
+  background-color: #212121;
+  top: 0;
+  left: 0;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+button {
+  /* Variables */
+  --button_radius: 0.75em;
+  --button_color: #e8e8e8;
+  --button_outline_color: #000000;
+  font-size: 17px;
+  font-weight: bold;
+  border: none;
+  border-radius: var(--button_radius);
+  background: var(--button_outline_color);
+}
+
+.button_top {
+  display: block;
+  box-sizing: border-box;
+  border: 2px solid var(--button_outline_color);
+  border-radius: var(--button_radius);
+  padding: 0.75em 1.5em;
+  background: var(--button_color);
+  color: var(--button_outline_color);
+  transform: translateY(-0.2em);
+  transition: transform 0.1s ease;
+}
+
+button:hover .button_top {
+  /* Pull the button upwards when hovered */
+  transform: translateY(-0.33em);
+}
+
+button:active .button_top {
+  /* Push the button downwards when pressed */
+  transform: translateY(0);
+}
+
+/* Media query for screens with a maximum width of 768px */
+@media (max-width: 768px) {
+  .terminalContainer {
+    padding: 20px; /* Add some padding to the container on smaller screens */
   }
 
-  .terminalContainer{
-    /* background-color: #049931; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 1200px;
-    flex-direction: column;
-    height: 100vh;
+  .terminalContainer p {
+    font-size: 0.9rem; /* Decrease font size for smaller screens */
   }
-  
+}
 
-  .terminalContainer p{
-    font-size: 1rem;
-  }
+/* Media query for screens with a maximum width of 576px */
+@media (max-width: 576px) {
 
-  .container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  .fakeScreen{
+    width: 450px;
   }
-
-
-  .terminalContainer *::selection{
-    background-color: #00d742;
-    color:black;
+  .terminalContainer p {
+    font-size: 0.8rem; /* Further decrease font size for even smaller screens */
   }
-
-  .blockDiv{
-    width: 100%;
-    height: 100vh;
-    background-color: #212121;
-    top:0;
-    left:0;
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  button {
-    /* Variables */
-    --button_radius: 0.75em;
-    --button_color: #e8e8e8;
-    --button_outline_color: #000000;
-    font-size: 17px;
-    font-weight: bold;
-    border: none;
-    border-radius: var(--button_radius);
-    background: var(--button_outline_color);
-  }
-  
-  .button_top {
-    display: block;
-    box-sizing: border-box;
-    border: 2px solid var(--button_outline_color);
-    border-radius: var(--button_radius);
-    padding: 0.75em 1.5em;
-    background: var(--button_color);
-    color: var(--button_outline_color);
-    transform: translateY(-0.2em);
-    transition: transform 0.1s ease;
-  }
-  
-  button:hover .button_top {
-    /* Pull the button upwards when hovered */
-    transform: translateY(-0.33em);
-  }
-  
-  button:active .button_top {
-    /* Push the button downwards when pressed */
-    transform: translateY(0);
-  }
+}
